--- a/client/src/Pages/Registration page/components/Login.module.css
+++ b/client/src/Pages/Registration page/components/Login.module.css
@@ -29,7 +29,7 @@ body {
 .closeModal {
    position: absolute;
    top: -10%;
-   left: 50%;
+   left: 45%;
    background: #ffffff;
    width: 25px;
    height: 25px;
@@ -103,9 +103,9 @@ i.closeIcon {
 }
 
 .loginForm {
-   margin: 3rem auto;
+   margin: 2rem auto;
    width: 100%;
-   height: 70%;
+   height: 100%;
 }
 .loginForm .title {
    font-size: 1.5rem;
@@ -159,9 +159,9 @@ p.link {
 input {
    color: var(--text-color);
 }
-input::placeholder {
+/* input::placeholder {
    color: grey;
-}
+} */
 .submit {
    display: flex;
    flex-direction: column;
@@ -496,6 +496,9 @@ input::placeholder {
    .closeModal i svg {
       font-size: 20px;
    }
+   .loginForm {
+   margin: 1rem auto;
+}
    .loginForm .title {
       font-size: 2rem;
    }
