--- a/client/src/Pages/User Dashboard/components/recordchild.module.css
+++ b/client/src/Pages/User Dashboard/components/recordchild.module.css
@@ -9,7 +9,7 @@
    border-top-right-radius: 2rem;
 } */
 .calendar {
-   margin-top: 1rem;
+   /* margin-top: 1rem; */
    background-color: var(--gray);
    height: 15rem;
    width: 100%;
